// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartTableLabel renders with defaultProps 1`] = `
<div
  className="ax-chart-table__label"
  style={
    Object {
      "width": "11rem",
    }
  }
>
  Lorem Ipsum
</div>
`;

exports[`ChartTableLabel renders with isFaded property 1`] = `
<div
  className="ax-chart-table__label ax-chart-table__label--faded"
  style={
    Object {
      "width": "11rem",
    }
  }
>
  Lorem Ipsum
</div>
`;
